# ChiangMaiEyes

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  pyproject.toml  skills-lock.json
.claude/skills/: remove_mouseover_and_centering.py
.github/workflows/: refresh-hotspots.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-01T10-06-16Z__frontend-src-app-tsx.md  2026-06-06T19-06-23Z__frontend-src-app-tsx.md
backend/: .env.example  pyproject.toml  render.yaml  requirements.txt
backend/api/: index.py
backend/app/: __init__.py  advisor.py  alerts.py  config.py  fire_spread_physics.py  main.py  models.py  services.py  text.py  weekly_forest_league.py
backend/app/providers/: history_provider.py  hotspot_provider.py  pm25_provider.py  weather_provider.py
backend/data/: chiangmai-province.json  hotspots.json  pm25.json  weather.json
backend/scripts/: refresh_snapshot.py
backend/tests/: test_advisor.py  test_data_status.py  test_providers.py  test_risk.py  test_weekly_forest_league.py
data/source/: chiangmai-dem1km-raw-candidate.tif  thaicfnet-chiangmai.json
docs/: API.md  ARCHITECTURE.md  CHAT_CONTEXT.md  DEPLOYMENT.md  FALLBACKS.md  ROADMAP.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: AiAdvisor.tsx  AlertSubscribe.tsx  DashboardMap.tsx  InfographicMap.tsx  PitchMode.tsx
frontend/src/data/: chiangmai-districts.json  (+4 more)
scripts/: README-refresh.md  build_community_forest_prototype.py  refresh_and_deploy.ps1
(+18 files in other folders)
